# AzureSphereDrivers

AVNET/HL/: CMakeLists.txt  imu_temp_pressure.c  imu_temp_pressure.h  light_sensor.c  light_sensor.h
AVNET/RT/: CMakeLists.txt
CLICK_4x4_KEY_74HC165/: 74HC165.c  74HC165.h  CMakeLists.txt
CLICK_8800_RETRO_AS1115/: CMakeLists.txt  as1115.c  as1115.h
CLICK_8x8_LED_MAX7219/: CMakeLists.txt  max7219.c  max7219.h
CLICK_EEPROM2/: CMakeLists.txt  eeprom2.c  eeprom2.h
EmbeddedScd30/: CMakeLists.txt
EmbeddedScd30/embedded-common/: sensirion_i2c.h
EmbeddedScd30/embedded-common/hw_i2c/: sensirion_hw_i2c_implementation.c
GROVE_16x2_RGB_LCD/: CMakeLists.txt  rgb_lcd.c  rgb_lcd.h
GROVE_HM3301/: CMakeLists.txt  hm330x.c  hm330x.h
MT3620_GROVE_SHIELD_LIBRARY/: CMakeLists.txt
embedded-i2c-scd4x/: sensirion_i2c_hal.c
examples/8800_RETRO_CLICK/: CMakeLists.txt  app_manifest.json  main.c
